# Tutors-Service-TA

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
src/app/adapters/entrypoints/api/: base.py
src/app/adapters/entrypoints/api/v1/: route_tutoring_session.py
src/app/adapters/repositories/: tutoring_session.py
src/app/adapters/units_of_work/: tutoring_session.py
src/app/adapters/use_cases/: tutoring_session.py  utils.py
src/app/configurator/: config.py  containers.py
src/app/domain/models/: tutoring_session.py
src/app/domain/ports/repositories/: tutoring_session.py
src/app/domain/ports/units_of_work/: tutoring_session.py
src/app/domain/ports/use_cases/: tutoring_session.py
src/app/domain/schemas/: tutoring_session.py
